# caseware-assessment

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AI_USAGE.md  ARCHITECTURE_AWS.md  CHALLENGE.md  Dockerfile  README.md  TEST_DOCKER.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: conftest.py  pyproject.toml
backend/app/: settings.py  urls.py
backend/app/ds/: apps.py
backend/app/ds/adapters/repositories/: case_repository.py  customer_repository.py
backend/app/ds/adapters/views/: ingest_view.py  search_view.py  seed_view.py
backend/app/ds/domain/: entities.py  ports.py
backend/app/ds/infrastructure/: checkpoint.py  container.py  event_emitter.py  lake_writer.py  models.py  search_index.py
backend/app/ds/migrations/: 0001_pgvector_extension.py  0002_initial.py
backend/app/ds/tests/: test_checkpoint.py  test_event_emitter.py  test_ingest.py  test_ingest_events.py  test_lake_writer.py  test_search.py
backend/app/ds/use_cases/: ingest.py  search.py
infra/: main.tf  outputs.tf  variables.tf  versions.tf
infra/docker/: init-db.sql  localstack-init.sh
infra/environments/prod/: main.tf  terraform.tfvars.example  variables.tf
infra/modules/compute/: main.tf  outputs.tf  variables.tf
infra/modules/database/: main.tf  outputs.tf  variables.tf
infra/modules/eventing/: main.tf  outputs.tf  variables.tf
infra/modules/networking/: main.tf  outputs.tf  variables.tf
infra/modules/search/: main.tf  outputs.tf  variables.tf
infra/modules/storage/: main.tf  outputs.tf  variables.tf
