[project]
name = "backend"
version = "0.1.0"
description = "datasearchpy — incremental Postgres ingest + deterministic search"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.3",
    "psycopg[binary]>=3.1",
    "pgvector>=0.4.2",
    "sentence-transformers>=3.0.0",
    "boto3>=1.35.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-django>=4.9.0",
    "ruff>=0.15.6",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "app.settings"
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]
