[project]
name = "backend"
version = "0.1.0"
description = "datasearchpy — incremental Postgres ingest + deterministic search"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.3",
    "gunicorn>=23.0.0",
    "psycopg[binary]>=3.1",
    "pgvector>=0.4.2",
    "sentence-transformers>=3.0.0",
    "boto3>=1.35.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-django>=4.9.0",
    "ruff>=0.15.6",
    "mypy>=1.14.0",
    "django-stubs>=5.1.0",
    "types-boto3>=1.0.2",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "app.settings"
pythonpath = ["."]
addopts = "-v --tb=short"
testpaths = ["app/ds/tests"]

[tool.mypy]
python_version = "3.14"
mypy_path = "."
ignore_missing_imports = true
check_untyped_defs = true
warn_unused_ignores = false
warn_return_any = false
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "app.settings"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]
